Enrique A01027318 ingles finalizado

--- a/trash/angular.json
+++ b/trash/angular.json
@@ -92,6 +92,12 @@
                     "configurations": {
                         "production": {
                             "browserTarget": "trash:build:production"
+                        },
+                        "es": {
+                            "browserTarget": "trash:build:es"
+                        },
+                        "en": {
+                            "browserTarget": "trash:build:en"
                         }
                     }
                 },
