--- a/trash/package.json
+++ b/trash/package.json
@@ -24,6 +24,7 @@
     "chart.js": "^2.9.3",
     "ng2-charts": "^2.3.0",
     "ngx-bootstrap": "^5.6.1",
+    "ngx-webstorage-service": "^4.1.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
