--- a/trash/package.json
+++ b/trash/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~9.1.3",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
+    "ng-onload": "^0.8.0",
     "ng2-charts": "^2.3.0",
     "ngx-bootstrap": "^5.6.1",
     "ngx-webstorage-service": "^4.1.0",
